{
  "version": 4,
  "terraform_version": "1.2.3",
  "serial": 1227,
  "lineage": "ede40d48-d3e3-5145-e67f-1918207df3bc",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "app_server_master",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-052efd3df9dad4825",
            "arn": "arn:aws:ec2:us-east-1:522956541171:instance/i-0a1c00b1b0e8127df",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a1c00b1b0e8127df",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "lm-kp",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-05c17f84ae6884885",
            "private_dns": "ip-172-31-46-175.ec2.internal",
            "private_ip": "172.31.46.175",
            "public_dns": "ec2-34-207-203-10.compute-1.amazonaws.com",
            "public_ip": "34.207.203.10",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-018181ddca59400f0",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "allow_ssh_and_xmpp"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c730f685cf03d683",
            "tags": {
              "Name": "lm-xmpp-server-01"
            },
            "tags_all": {
              "Name": "lm-xmpp-server-01"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-057b714890f133ee3"
            ]
          },
          "dependencies": [
            "aws_security_group.lm-sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "lm-lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:522956541171:loadbalancer/net/lm-load-balancer/45b963ad60d81d0a",
            "arn_suffix": "net/lm-load-balancer/45b963ad60d81d0a",
            "dns_name": "lm-load-balancer-45b963ad60d81d0a.elb.us-east-1.amazonaws.com",
            "enable_cross_zone_load_balancing": false,
            "enable_deletion_protection": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:522956541171:loadbalancer/net/lm-load-balancer/45b963ad60d81d0a",
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "lm-load-balancer",
            "subnet_mapping": [
              {
                "subnet_id": "subnet-02e6cef690eac708c"
              },
              {
                "subnet_id": "subnet-042742ebd4553eaf4"
              },
              {
                "subnet_id": "subnet-07ad9f30962909ead"
              },
              {
                "subnet_id": "subnet-0b5ace1a22216d42b"
              },
              {
                "subnet_id": "subnet-0c730f685cf03d683"
              },
              {
                "subnet_id": "subnet-0fdf55f3dbad2b1a2"
              }
            ],
            "subnets": [
              "subnet-02e6cef690eac708c",
              "subnet-042742ebd4553eaf4",
              "subnet-07ad9f30962909ead",
              "subnet-0b5ace1a22216d42b",
              "subnet-0c730f685cf03d683",
              "subnet-0fdf55f3dbad2b1a2"
            ],
            "vpc_id": "vpc-078e8a3dd5e838865",
            "zone_id": "Z26RNL4JYFTOTI"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "lm-lb-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:522956541171:listener/net/lm-load-balancer/45b963ad60d81d0a/fd9ea87578635a0b",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:522956541171:targetgroup/lm-target-group/ac1003477318f6ee",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:522956541171:listener/net/lm-load-balancer/45b963ad60d81d0a/fd9ea87578635a0b",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:522956541171:loadbalancer/net/lm-load-balancer/45b963ad60d81d0a",
            "port": 5222,
            "protocol": "TCP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.lm-lb",
            "aws_lb_target_group.lm-lb-tg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "lm-lb-tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:522956541171:targetgroup/lm-target-group/ac1003477318f6ee",
            "arn_suffix": "targetgroup/lm-target-group/ac1003477318f6ee",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "port": "traffic-port",
                "protocol": "TCP",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:522956541171:targetgroup/lm-target-group/ac1003477318f6ee",
            "lambda_multi_value_headers_enabled": false,
            "name": "lm-target-group",
            "port": 5222,
            "preserve_client_ip": "true",
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-078e8a3dd5e838865"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "lm-lb-tg-attachment-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:522956541171:targetgroup/lm-target-group/ac1003477318f6ee-20220708071150602000000004",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:522956541171:targetgroup/lm-target-group/ac1003477318f6ee",
            "target_id": "i-0a1c00b1b0e8127df"
          },
          "dependencies": [
            "aws_instance.app_server_master",
            "aws_lb_target_group.lm-lb-tg",
            "aws_security_group.lm-sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lm-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:522956541171:security-group/sg-057b714890f133ee3",
            "description": "Allow SSH and XMPP inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-057b714890f133ee3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Temporary all traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "XMPP from VPC",
                "from_port": 5222,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5222
              }
            ],
            "name": "allow_ssh_and_xmpp",
            "name_prefix": "",
            "owner_id": "522956541171",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_ssh_xmpp"
            },
            "tags_all": {
              "Name": "allow_ssh_xmpp"
            },
            "timeouts": null,
            "vpc_id": "vpc-078e8a3dd5e838865"
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}